# SoCracked

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  dimacs2key.c  lattice2dimacs.c  latticecracker.c  socracked.c  socracked.cu  socracked.h  socracked_cuda.h  sodark.c  sodark.h  test-socracked.sh
sbox-cnf/: 8-366-3219-65213470-9db07eac.cnf
test/: brute_test10.txt  brute_test11.txt  brute_test12.txt  brute_test13.txt  brute_test14.txt  brute_test15.txt  brute_test16.txt  brute_test6.txt  brute_test7.txt  brute_test8.txt  brute_test9.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
